--- a/src/components/SigninForm/index.css
+++ b/src/components/SigninForm/index.css
@@ -102,3 +102,21 @@ input:focus ~ .highlight {
   from { background:#5264AE; }
   to  { width:0; background:transparent; }
 }
+
+.login-button {
+  border-radius: 50%;
+  background: #f1e9e9;
+  box-shadow:  5px 5px 10px #757474,
+            -5px -5px 10px #757474;
+  border: none;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 40%;
+  bottom: -50px;
+  transition: all 0.3s ease;
+}
+
+.login-button:hover {
+  background: #5264AE;
+}
